# libtranslit

./: Makefile.am  README  autogen.sh  configure.ac
docs/: Makefile.am
libtranslit/: Makefile.am  Translit-1.0.metadata  libtranslit.pc.in  translit.h  translitfilter.c  translitfilter.h  translitmodule.c  translitmodule.h  translittransliterator.c  translittransliterator.h  translittypes.h
modules/: Makefile.am  icumodule.c  m17nmodule.c  transliteratoricu.c  transliteratoricu.h  transliteratorm17n.c  transliteratorm17n.h  translitfilterm17n.c  translitfilterm17n.h
tests/: Makefile.am  basic.c
